small bug fixed

--- a/Camera parameter analysis.ipynb
+++ b/Camera parameter analysis.ipynb
@@ -629,7 +629,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#To be continued??"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -658,26 +660,25 @@
    ],
    "source": [
     "# 以光圈值为y轴，快门速度为x轴，绘制散点图; 以光圈值为x轴，ISO值为y轴，绘制散点图; 以焦距为x轴，快门速度为y轴，绘制散点图; 以焦距为x轴，ISO值为y轴，绘制散点图;\n",
-    "# subplot(2,2,1)表示将图分为2行2列，当前是第1个图\n",
+    "# draw the scatter plot of the relationship between F-stop and shutter speed, F-stop and ISO, focal length and shutter speed, focal length and ISO\n",
     "plt.figure(figsize=(15, 10))\n",
     "plt.subplot(2, 2, 1)\n",
     "plt.scatter(F_stop_list, shutter_speed_list)\n",
     "plt.title(\"F-stop and shutter speed\")\n",
     "plt.xlabel(\"F-stop(f)\")\n",
     "plt.ylabel(\"shutter speed(s)\")\n",
-    "# subplot(2,2,2)表示将图分为2行2列，当前是第2个图\n",
+    "\n",
     "plt.subplot(2, 2, 2)\n",
     "plt.scatter(F_stop_list, ISO_list)\n",
     "plt.title(\"F-stop and ISO\")\n",
     "plt.xlabel(\"F-stop(f)\")\n",
     "plt.ylabel(\"ISO\")\n",
-    "# subplot(2,2,3)表示将图分为2行2列，当前是第3个图\n",
     "plt.subplot(2, 2, 3)\n",
     "plt.scatter(focal_length_list, shutter_speed_list)\n",
     "plt.title(\"focal length and shutter speed\")\n",
     "plt.xlabel(\"focal length(mm)\")\n",
     "plt.ylabel(\"shutter speed(s)\")\n",
-    "# subplot(2,2,4)表示将图分为2行2列，当前是第4个图\n",
+    "\n",
     "plt.subplot(2, 2, 4)\n",
     "plt.scatter(focal_length_list, ISO_list)\n",
     "plt.title(\"focal length and ISO\")\n",
@@ -706,6 +707,7 @@
    ],
    "source": [
     "#以光圈值为x轴，快门速度为y轴，焦距为z轴，ISO值为颜色（值越大透明度越低）绘制3D散点图\n",
+    "# draw the 3D scatter plot of the relationship between F-stop, shutter speed, focal length and ISO\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import numpy as np\n",
     "fig = plt.figure()\n",
