--- a/Camera parameter analysis.ipynb
+++ b/Camera parameter analysis.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 导入需要使用的包，指定文件路径和图片类型 | Import the necessary packages and specify the file path and image type to be used"
+    "# 统计目录下照片的多种信息如焦距、光圈、快门速度等，提供一些趣味以及尽头购买的参考 | Count the focal length, aperture, shutter speed, etc. of the photos in the directory, provide some fun and purchase reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 导入需要使用的包，指定文件路径和图片类型 | Import the necessary packages and specify the file path and image type to be used"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +24,20 @@
      "output_type": "stream",
      "text": [
       "('.jpg', '.jpeg', '.png') ('.JPG', '.JPEG', '.PNG')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_3916\\3410838725.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
      ]
     }
    ],
@@ -31,6 +52,10 @@
     "file_type_a = \".jpg\", \".jpeg\", \".png\"\n",
     "file_type_A = tuple(map(str.upper, file_type_a))\n",
     "\n",
+    "if not os.path.exists(file_path):\n",
+    "    print(\"目录不存在\")\n",
+    "    sys.exit()\n",
+    "\n",
     "print(file_type_a, file_type_A)"
    ]
   },
@@ -38,12 +63,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 读取所有目录下的图片文件 | Read all image files in the directory"
+    "## 读取所有目录下的图片文件 | Read all image files in the directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,6 +83,8 @@
    "source": [
     "# define a list to store the image's file pathes, including the subfolders\n",
     "jpg_path_list = []\n",
+    "# set\n",
+    "error_path_list = set()\n",
     "TOTAL_SIZE = 0\n",
     "for root, dirs, files in os.walk(file_path):\n",
     "    for file in files:\n",
@@ -73,12 +100,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 定义需要使用的方法 | Define the methods to be used"
+    "## 定义需要使用的方法 | Define the methods to be used"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +118,7 @@
     "    try:\n",
     "        focal_length = Image.open(image_path)._getexif()[37386]\n",
     "    except:\n",
+    "        error_path_list.add(image_path)\n",
     "        PrintErrorImage(image_path)\n",
     "        return\n",
     "\n",
@@ -106,6 +134,7 @@
     "    try:\n",
     "        F_stop = Image.open(image_path)._getexif()[33437]\n",
     "    except:\n",
+    "        error_path_list.add(image_path)\n",
     "        PrintErrorImage(image_path)\n",
     "        return\n",
     "    return F_stop\n",
@@ -120,6 +149,7 @@
     "    try:\n",
     "        ISO = Image.open(image_path)._getexif()[34855]\n",
     "    except:\n",
+    "        error_path_list.add(image_path)\n",
     "        PrintErrorImage(image_path)\n",
     "        return\n",
     "    return ISO\n",
@@ -134,6 +164,7 @@
     "    try:\n",
     "        shutter_speed = Image.open(image_path)._getexif()[33434]\n",
     "    except:\n",
+    "        error_path_list.add(image_path)\n",
     "        PrintErrorImage(image_path)\n",
     "        return\n",
     "    return shutter_speed\n",
@@ -154,7 +185,6 @@
     "    :param total: the total number of the process\n",
     "    \"\"\"\n",
     "    progress = current / total\n",
-    "    # print % without 0\n",
     "    sys.stdout.write(\n",
     "        \"\\r\"\n",
     "        + progressName\n",
@@ -169,12 +199,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 读取图片信息并存储到pandas的DataFrame中"
+    "## 读取图片信息并存储到pandas的DataFrame中，速度可能较慢，待优化？ | Read the image information and store it in the pandas DataFrame, which may be slow, to be optimized?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -185,12 +215,12 @@
       "Error image:  D:\\EOSR7\\Avatar.png may not have focal length, F-stop, ISO, or shutter speed\n",
       "Error image:  D:\\EOSR7\\Avatar.png may not have focal length, F-stop, ISO, or shutter speed\n",
       "Error image:  D:\\EOSR7\\Avatar.png may not have focal length, F-stop, ISO, or shutter speed\n",
-      "Reading Images Progress: [==================================================] 100.0%"
+      "Reading Images Progress: [==================================================] 100.0%\n",
+      " The error image list is:  {'D://EOSR7//Avatar.png'}\n"
      ]
     }
    ],
    "source": [
-    "# 提取快门速度、ISO值、焦距、光圈值的关系\n",
     "shutter_speed_list = []\n",
     "ISO_list = []\n",
     "focal_length_list = []\n",
@@ -210,9 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " The error image list is:  {'D:\\\\EOSR7\\\\Avatar.png'}\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -353,13 +391,12 @@
        "[5314 rows x 4 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 将数据存储到pandas中, index 为jpg_path_list\n",
     "data = {\n",
     "    \"shutter_speed(s)\": shutter_speed_list,\n",
     "    \"ISO\": ISO_list,\n",
@@ -367,6 +404,7 @@
     "    \"F_stop(/f)\": F_stop_list,\n",
     "}\n",
     "images_df = pd.DataFrame(data, index=jpg_path_list)\n",
+    "print(\"\\n The error image list is: \", error_path_list.__str__().replace(\"//\", \"/\"))\n",
     "images_df"
    ]
   },
@@ -374,12 +412,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 搜索目录内图片名称来确保图片是否被正确读取 | Search the directory for image names to ensure that the images are read correctly\n"
+    "## 搜索目录内图片名称来确保图片是否被正确读取 | Search the directory for image names to ensure that the images are read correctly\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -401,12 +439,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 分析图片的焦距（如果你有一个变焦镜头的话） | Analyze the focal length of the image (if you have a zoom lens)"
+    "## 分析图片的焦距（如果你有一个变焦镜头的话） | Analyze the focal length of the image (if you have a zoom lens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -437,13 +475,13 @@
        " '1600-2000': 0}"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 定义一个焦段字典，以焦段为键，以数量为值: 8-15,16-24,25-35,35-50,50-70,70-105,105-135,135-200,200-300,300-400,400-600,600-800,800-1200,1200-1600,1600-2000\n",
+    "# 定义一个焦段字典，以焦段为键，以数量为值|define a dictionary to store the focal length as the key and the number as the value\n",
     "focal_length_dict = {\n",
     "    \"8-15 \": 0,\n",
     "    \"16-24\": 0,\n",
@@ -515,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -554,12 +592,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 汇合常用焦段"
+    "### 汇合常用焦段"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -619,12 +657,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 分析图片的光圈"
+    "## 分析图片的光圈"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -698,12 +736,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 分析图片的快门速度？"
+    "## 分析图片的快门速度？"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,12 +752,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 快门速度、光圈、焦距之间的关系？| Relationship between shutter speed, aperture, and focal length?"
+    "## 快门速度、光圈、焦距之间的关系？| Relationship between shutter speed, aperture, and focal length?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +955,7 @@
        "[5313 rows x 4 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
