--- a/Camera parameter analysis.ipynb
+++ b/Camera parameter analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -25,24 +25,10 @@
      "text": [
       "('.jpg', '.jpeg', '.png') ('.JPG', '.JPEG', '.PNG')\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_3916\\3410838725.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd  # pip install pyarrow may be suggested\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from PIL import Image\n",
@@ -68,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -215,8 +201,7 @@
       "Error image:  D:\\EOSR7\\Avatar.png may not have focal length, F-stop, ISO, or shutter speed\n",
       "Error image:  D:\\EOSR7\\Avatar.png may not have focal length, F-stop, ISO, or shutter speed\n",
       "Error image:  D:\\EOSR7\\Avatar.png may not have focal length, F-stop, ISO, or shutter speed\n",
-      "Reading Images Progress: [==================================================] 100.0%\n",
-      " The error image list is:  {'D://EOSR7//Avatar.png'}\n"
+      "Reading Images Progress: [==================================================] 100.0%"
      ]
     }
    ],
@@ -240,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +376,7 @@
        "[5314 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +460,7 @@
        " '1600-2000': 0}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +940,7 @@
        "[5313 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
