--- a/CameraParameterAnalysis.ipynb
+++ b/CameraParameterAnalysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +218,10 @@
     "    sys.stdout.write(\n",
     "        \"\\r\"\n",
     "        + progressName\n",
+    "        + \" \"\n",
+    "        + str(current)\n",
+    "        + \"/\"\n",
+    "        + str(total)\n",
     "        + \" Progress: [{0:50s}] {1:.1f}%\".format(\n",
     "            \"=\" * int(progress * 50), progress * 100\n",
     "        )\n",
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading Images Progress: [==================================================] 100.0%"
+      "Reading Images Progress:【】 [==================================================] 100.0% 15350/15350"
      ]
     }
    ],
@@ -299,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +446,7 @@
        "[15350 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,107 +466,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Error Image Path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\Ipad\\IMG_0008.PNG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\川藏自驾\\好看的风景和静物\\IMG_4092...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>K:\\BaiduSyncdisk\\Photos\\川藏自驾\\好看的伙伴\\IMG_4842.JPG</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>173 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      Error Image Path\n",
-       "0            K:\\BaiduSyncdisk\\Photos\\Ipad\\IMG_0008.PNG\n",
-       "1    K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...\n",
-       "2    K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...\n",
-       "3    K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...\n",
-       "4    K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...\n",
-       "..                                                 ...\n",
-       "168  K:\\BaiduSyncdisk\\Photos\\川藏自驾\\好看的风景和静物\\IMG_4092...\n",
-       "169  K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...\n",
-       "170  K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...\n",
-       "171  K:\\BaiduSyncdisk\\Photos\\水印\\批处理20241017224751\\s...\n",
-       "172    K:\\BaiduSyncdisk\\Photos\\川藏自驾\\好看的伙伴\\IMG_4842.JPG\n",
-       "\n",
-       "[173 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "error_images_df = pd.DataFrame(error_path_list, columns=[\"Error Image Path\"])\n",
+    "# # save to csv in the same folder\n",
+    "# error_images_df.to_csv(\"error_images_metadata.csv\")\n",
+    "\n",
     "error_images_df"
    ]
   },
@@ -575,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -603,14 +514,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting Focal Length Progress: [==================================================] 100.0% Invalid focal length count:  173\n"
+      "Counting Focal Length Progress:【】 [==================================================] 100.0% 15350/15350 Invalid focal length count:  173\n"
      ]
     },
     {
@@ -633,7 +544,7 @@
        " '1600-2000': 0}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -822,14 +733,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting F-stop Progress: [==================================================] 100.0%"
+      "Counting F-stop Progress:【】 [==================================================] 100.0% 15350/15350"
      ]
     }
    ],
@@ -865,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1027,7 @@
        "[15174 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
